Fix log message x-overflow

--- a/styles/logger.module.css
+++ b/styles/logger.module.css
@@ -45,3 +45,7 @@
     vertical-align: top;
     font-weight: bold;
 }
+
+.message {
+    word-break: break-word;
+}
